# cuda-convolution-inference

./: .gitignore  README.md  cuda_conv_host_demo.cu  cuda_conv_interface.h  cuda_conv_kernel.cu
archive/: README.md  README_m3.md  README_original.md  m1_cpu.slurm  m1_gpu.slurm  m2.slurm  m3.slurm
archive/active-legacy/: CMakeLists.txt  final.cc  run.sh
archive/active-legacy/src/layer/custom/: cpu-new-forward.cc  m3-competition.cu
archive/misc/: final.slurm
archive/project/m3/op_0/: m3-forward.cu
archive/project/m3/op_1/: m3-forward.cu
archive/project/m3/op_2/: m3-forward.cu
archive/project/m3/op_4/: m3-forward.cu
archive/project/m3/op_5/: m3-forward.cu
archive/project/m3/req_0/: m3-forward.cu  m3-forward_stack_on_req2.cu
archive/project/m3/req_1/: m3-forward.cu  m3-forward_better_data_loading.cu  m3-forward_no_shared_mem.cu
archive/project/m3/req_2/: m3-forward.cu
archive/project/src/layer/custom/: m3-forward.cu  matmul-unroll.cu  new-forward.cu
